# dynamixel-control

./: .gitignore  readme.md
config/: robot_params.yaml
dynajoy/: package.xml  setup.cfg  setup.py
dynajoy/dynajoy/: command_publisher.py  kinematics.py  odrive_can.py
dynajoy/launch/: robot_launch.py
dynamixel_control_cpp/: CMakeLists.txt  README.md  package.xml
dynamixel_control_cpp/include/dynamixel_control_cpp/: command_publisher.hpp
dynamixel_control_cpp/launch/: robot_launch.cpp
dynamixel_control_cpp/src/: command_publisher.cpp
