<package format="2">
  <name>dynamixel_control_cpp</name>
  <version>0.1.0</version>
  <description>Dynamixel control using joystick input in C++ for ROS 2.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  
  <test_depend>ament_cmake_gtest</test_depend>
</package>